# chia-seeder

./: BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZATION_RUNBOOK.md  Cargo.toml  README.md  README_TEMPLATE.md  customize
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  tech-debt.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/interface/: opts.rs
doc/adl/: 0000-index.md  0001-rust.md  0002-base-architecture-pattern.md  0003-crates-relationship.md  README.md  TEMPLATE.md
doc/adl/assets/diagrams/: crates-relationship.drawio
doc/guides/: running-tests.md  writting-adrs.md  writting-tests.md
doc/guides/contributing/: code-of-conduct.md  issues.md  pull-requests.md
